# envy

./: CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  clippy.toml
.github/: dependabot.yml
.github/workflows/: rust.yml
include/: direnv_stdlib.sh
src/: bash.rs  errors.rs  main.rs  opt.rs  settings.rs
src/hooks/: bash.rs  fish.rs  mod.rs  zsh.rs
tests/: cli.rs
