[package]
name = "envy-cli"
version = "0.4.0"
authors = ["Matthias Endler <matthias-endler@gmx.net>"]
edition = "2021"
resolver = "1"
description = "A magical little tool that takes care of your environment settings."
homepage = "https://github.com/mre/envy"
keywords = [
    "environment",
    "dotenv",
    "cli",
]
license = "Apache-2.0/MIT"
repository = "https://github.com/mre/envy"
readme = "README.md"

[[bin]]
name = "envy"
path = "src/main.rs"

[dependencies]
structopt = "0.3.26"
failure = "0.1.8"
config = "0.15.3"
serde = "1.0.152"
serde_derive = "1.0.152"
regex = "1.11.1"
serde_regex = "1.1.0"
anyhow = "1.0.94"
directories = "5.0.1"
toml = "0.8.19"
