[package]
name = "envy-cli"
version = "0.5.0"
authors = ["Matthias Endler <matthias-endler@gmx.net>"]
edition = "2024"
resolver = "2"
rust-version = "1.85"
description = "A magical little tool that takes care of your environment settings."
homepage = "https://github.com/mre/envy"
keywords = ["environment", "dotenv", "cli"]
license = "Apache-2.0/MIT"
repository = "https://github.com/mre/envy"
readme = "README.md"

[[bin]]
name = "envy"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
config = "0.15.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.11"
serde_regex = "1.1"
anyhow = "1.0"
directories = "6.0"
toml = "0.8"

[dev-dependencies]
tempfile = "3.21"
