[package]
name = "envy-cli"
version = "0.6.0"
authors = ["Matthias Endler <matthias-endler@gmx.net>"]
edition = "2024"
resolver = "3"
rust-version = "1.85"
description = "A magical little tool that takes care of your environment settings."
homepage = "https://github.com/mre/envy"
keywords = ["environment", "dotenv", "cli"]
license = "Apache-2.0/MIT"
repository = "https://github.com/mre/envy"
readme = "README.md"

[[bin]]
name = "envy"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
config = "0.15.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.12"
serde_regex = "1.1"
anyhow = "1.0"
directories = "6.0"
toml = "0.9"

[dev-dependencies]
tempfile = "3.25"

[features]
default = []
bash-support = []

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
match_same_arms = { level = "allow", priority = 1 }
missing_const_for_fn = "warn"

[workspace.lints.rust]
absolute_paths_not_starting_with_crate = "warn"
anonymous_parameters = "deny"
macro_use_extern_crate = "deny"
missing_copy_implementations = "warn"
missing_debug_implementations = "warn"
invalid_html_tags = "warn"
semicolon_in_expressions_from_macros = "warn"
unreachable_pub = "warn"
unused_extern_crates = "warn"
variant_size_differences = "warn"
missing_docs = "deny"
